# moonsound

./: .prettierignore  README.md  TODO.md  angular.json  eslint.config.js  package.json  pnpm-lock.yaml
docs/: ARCHITECTURE.md
src/: index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: lib.rs  metadata.rs  saved_directories.rs  song.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: m20220101_000001_create_table.rs
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/mac/: window.rs
src-tauri/src/macos_interop/: mod.rs  now_playing.rs
src-tauri/src/music/: commands.rs  core.rs  mod.rs  tags.rs  types.rs
src-tauri/src/windows/: README.md  commands.rs  core.rs  mod.rs
src/app/: app.component.ts  app.config.ts  app.routes.ts
src/app/components/: light-glass-outlined.ts  under-titlebar.component.ts
src/app/components/album-art/: album-art.html  album-art.scss  album-art.ts
src/app/components/controls/: play-pause.ts  volume-slider.ts
src/app/components/controls/play-pause/: play-pause-btn.html  play-pause-btn.scss  play-pause-btn.ts  play-pause.html  play-pause.scss  play-pause.ts
src/app/components/controls/volume-slider/: volume-slider.html  volume-slider.scss  volume-slider.ts
src/app/components/currently-playing-material/: currently-playing-material.html  currently-playing-material.scss  currently-playing-material.ts
src/app/components/light-glass-outlined/: light-glass-outlined.html  light-glass-outlined.scss  light-glass-outlined.ts
src/app/components/under-titlebar/: under-titlebar-macos.html  under-titlebar-macos.scss  under-titlebar-macos.ts  under-titlebar.html  under-titlebar.ts
src/app/injectables/: metadata.ts
src/app/layouts/: app-layout.ts
src/app/services/: fs.ts  music.ts  windows.ts
src/app/store/: index.ts  tauri.ts
src/app/types/: currently-playing.ts  song-metadata.ts
src/app/utils/: menu.ts  platform.ts  settings.ts  strings.ts  styling.ts
src/app/views/: currently-playing.component.ts  home.component.ts  settings.component.ts
src/app/views/currently-playing/: currently-playing.html  currently-playing.scss  currently-playing.ts
src/app/views/settings/: settings.html  settings.scss  settings.ts
