[package]
name = "moonsound"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "moonsound_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5.3", features = ["mp3"] }
tauri-plugin-dialog = "2"
rodio = {version = "0.20.1", features = ["symphonia-all"] }
window-vibrancy = "0.5.2"
objc = "0.2.7"
hex_color = "3.0.0"
tauri-plugin-window-state = "2.2.0"
rand = "0.8.5"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
