[package]
name = "moonsound"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "moonsound_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]

migration = { path = "./migration" }
entity = { path = "./entity" }

tauri = { version = "2.1.1", features = [] }
tauri-plugin-opener = "2.2.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
symphonia = { git = "https://github.com/pdeljanov/Symphonia.git", branch = "dev-0.6", features = ["all"] }
tauri-plugin-dialog = "2.2.0"
rodio = {version = "0.20.1", features = ["symphonia-all"] }
window-vibrancy = "0.5.2"
tauri-plugin-window-state = "2.2.0"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-os = "2.2.0"
base64 = "0.22.1"
sea-orm = { version = "1.1.2", features = [ "sqlx-sqlite", "runtime-async-std-rustls", "macros" ] }
dirs = "5.0.1"
tokio = { version = "1.42.0", features = ["full"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
objc2-media-player = { version = "0.2.2", features = ["all"] }
block2 = "0.5.1"
objc2 = "0.5.2"
objc2-foundation = "0.2.2"

[workspace]
