[package]
name = "moonsound"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "moonsound_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]

migration = { path = "./migration" }
entity = { path = "./entity" }

tauri = { version = "2.9.1", features = [] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
symphonia = { git = "https://github.com/pdeljanov/Symphonia.git", branch = "dev-0.6", features = ["all"] }
tauri-plugin-dialog = "2.4.0"
rodio = "0.21.1"
window-vibrancy = "0.6.0"
tauri-plugin-window-state = "2.4.0"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-os = "2.3.1"
base64 = "0.22.1"
sea-orm = { version = "2.0.0-rc.28", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }
dirs = "6.0.0"
tokio = { version = "1.48.0", features = ["full"] }
tauri-plugin-process = "2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
objc2-media-player = "0.3.2"
block2 = "0.6.2"
objc2 = "0.6.3"
objc2-foundation = "0.3.2"

[workspace]
