[package]
name = "entity"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[dependencies.sea-orm]
version = "2.0.0-rc.28" # sea-orm version
features = [
    "sqlx-sqlite",
    "runtime-tokio",
    "macros"
]